intai.erb 제외 캐릭터관련 폴더 번역

--- a/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_MAKE_DEFAULT.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_MAKE_DEFAULT.ERB
@@ -310,9 +310,9 @@ FOR SELECT,1,CHARANUM
 		BASE:SELECT:외관기본값 = 3
 	ELSEIF CHARATALENT_F(SELECT, 0, "날씬함") > 0
 		BASE:SELECT:외관기본값 = 4
-	ELSEIF CHARATALENT_F(SELECT, 0, "巨尻") > 0
+	ELSEIF CHARATALENT_F(SELECT, 0, "빵뎅이") > 0
 		BASE:SELECT:외관기본값 = 5
-	ELSEIF CHARATALENT_F(SELECT, 0, "爆尻") > 0
+	ELSEIF CHARATALENT_F(SELECT, 0, "왕뎅이") > 0
 		BASE:SELECT:외관기본값 = 6
 	ELSE
 		BASE:SELECT:외관기본값 = 0
@@ -342,9 +342,9 @@ FOR SELECT,1,CHARANUM
 		MAXBASE:SELECT:외관기본값 = 3
 	ELSEIF CHARATALENT_F(SELECT, 1, "날씬함") > 0
 		MAXBASE:SELECT:외관기본값 = 4
-	ELSEIF CHARATALENT_F(SELECT, 1, "巨尻") > 0
+	ELSEIF CHARATALENT_F(SELECT, 1, "빵뎅이") > 0
 		MAXBASE:SELECT:외관기본값 = 5
-	ELSEIF CHARATALENT_F(SELECT, 1, "爆尻") > 0
+	ELSEIF CHARATALENT_F(SELECT, 1, "왕뎅이") > 0
 		MAXBASE:SELECT:외관기본값 = 6
 	ELSE
 		MAXBASE:SELECT:외관기본값 = 0
