--- a/ERB/SYSTEM/캐릭터_메이킹_관련/EXPORT_CSV.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/EXPORT_CSV.ERB
@@ -189,9 +189,9 @@ REPEAT 1000
 			ELSEIF TALENT:812 == 4
 				PRINT ;　날씬함
 			ELSEIF TALENT:812 == 5
-				PRINT ;　巨尻
+				PRINT ;　빵뎅이
 			ELSEIF TALENT:812 == 6
-				PRINT ;　爆尻
+				PRINT ;　왕뎅이
 			ENDIF
 		ENDIF
 		PRINTL
@@ -293,13 +293,13 @@ PRINTL ;-------目つき--------------------
 PRINTFORML CSTR,18,%CSTR:18%,
 PRINTL 
 PRINTL ;-------プロフィール-------------
-PRINTL ;髪の色
+PRINTL ;머리색
 PRINTFORML CSTR,30,%CSTR:30%,
 IF TALENT:변신능력 == 0
-	PRINTL ;変身時の髪の色
+	PRINTL ;変身時の머리색
 	PRINTFORML CSTR,31,%CSTR:30%,
 ELSE
-	PRINTL ;変身時の髪の色
+	PRINTL ;変身時の머리색
 	PRINTFORML CSTR,31,%CSTR:31%,
 ENDIF
 PRINTL ;右目の色
