--- a/ERB/SYSTEM/컨피그/CONFIG_SYSTEM.ERB
+++ b/ERB/SYSTEM/컨피그/CONFIG_SYSTEM.ERB
@@ -47,7 +47,7 @@
 ;3	┣非戦闘員持ちと희롱특화체질は흑화しない
 ;4	┗흑화時に容姿を変更する
 ;5	  ┣髪型の変更を許可する
-;6	  ┣髪の色の変更を許可する
+;6	  ┣머리색の変更を許可する
 ;7	  ┣目の色の変更を許可する
 ;8	  ┗肌の色の変更を許可する
 ;9	악질 시민による幽閉イベントを許可する
@@ -303,7 +303,7 @@ ELSEIF PAGE == 1
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(6) == 0
 				SETCOLOR 105,105,105
-			PRINTFORML 　　 ┣[66]髪の色の変更を許可する
+			PRINTFORML 　　 ┣[66]머리색の変更を許可する
 			RESETCOLOR
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(7) == 0
