--- a/ERB/범용함수/COMMON_함수.ERB
+++ b/ERB/범용함수/COMMON_함수.ERB
@@ -1326,7 +1326,7 @@ IF CFLAG:ARG:1 > 0
 		ELSEIF ARGS == "후타나리"
 			SIF TALENT:ARG:후타나리 > 0
 				LOCALS = 후타나리
-		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "巨尻" || ARGS == "爆尻"
+		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "빵뎅이" || ARGS == "왕뎅이"
 			IF TALENT:ARG:변신시외관 == 1
 				LOCALS = 순산형
 			ELSEIF TALENT:ARG:변신시외관 == 2
@@ -1336,9 +1336,9 @@ IF CFLAG:ARG:1 > 0
 			ELSEIF TALENT:ARG:변신시외관 == 4
 				LOCALS = 날씬함
 			ELSEIF TALENT:ARG:변신시외관 == 5
-				LOCALS = 巨尻
+				LOCALS = 빵뎅이
 			ELSEIF TALENT:ARG:변신시외관 == 6
-				LOCALS = 爆尻
+				LOCALS = 왕뎅이
 			ENDIF
 		ENDIF
 	ELSE
@@ -1401,7 +1401,7 @@ IF CFLAG:ARG:1 > 0
 		ELSEIF ARGS == "후타나리"
 			SIF TALENT:ARG:변신시후타나리 > 0
 				LOCALS = 후타나리
-		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "巨尻" || ARGS == "爆尻"
+		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "빵뎅이" || ARGS == "왕뎅이"
 			IF TALENT:ARG:외관 == 1
 				LOCALS = 순산형
 			ELSEIF TALENT:ARG:외관 == 2
@@ -1411,9 +1411,9 @@ IF CFLAG:ARG:1 > 0
 			ELSEIF TALENT:ARG:외관 == 4
 				LOCALS = 날씬함
 			ELSEIF TALENT:ARG:외관 == 5
-				LOCALS = 巨尻
+				LOCALS = 빵뎅이
 			ELSEIF TALENT:ARG:외관 == 6
-				LOCALS = 爆尻
+				LOCALS = 왕뎅이
 			ENDIF
 		ENDIF
 	ENDIF
@@ -1463,7 +1463,7 @@ ELSE
 		ELSEIF ARGS == "후타나리"
 			SIF TALENT:ARG:변신시후타나리 > 0
 				LOCALS = 후타나리
-		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "巨尻" || ARGS == "爆尻"
+		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "빵뎅이" || ARGS == "왕뎅이"
 			IF TALENT:ARG:변신시외관 == 1
 				LOCALS = 순산형
 			ELSEIF TALENT:ARG:변신시외관 == 2
@@ -1473,9 +1473,9 @@ ELSE
 			ELSEIF TALENT:ARG:변신시외관 == 4
 				LOCALS = 날씬함
 			ELSEIF TALENT:ARG:변신시외관 == 5
-				LOCALS = 巨尻
+				LOCALS = 빵뎅이
 			ELSEIF TALENT:ARG:변신시외관 == 6
-				LOCALS = 爆尻
+				LOCALS = 왕뎅이
 			ENDIF
 		ENDIF
 	ELSE
@@ -1510,7 +1510,7 @@ ELSE
 		ELSEIF ARGS == "후타나리"
 			SIF TALENT:ARG:후타나리 > 0
 				LOCALS = 후타나리
-		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "巨尻" || ARGS == "爆尻"
+		ELSEIF ARGS == "순산형" || ARGS == "포동포동" || ARGS == "유아배" || ARGS == "날씬함" || ARGS == "빵뎅이" || ARGS == "왕뎅이"
 			IF TALENT:ARG:외관 == 1
 				LOCALS = 순산형
 			ELSEIF TALENT:ARG:외관 == 2
@@ -1520,9 +1520,9 @@ ELSE
 			ELSEIF TALENT:ARG:외관 == 4
 				LOCALS = 날씬함
 			ELSEIF TALENT:ARG:외관 == 5
-				LOCALS = 巨尻
+				LOCALS = 빵뎅이
 			ELSEIF TALENT:ARG:외관 == 6
-				LOCALS = 爆尻
+				LOCALS = 왕뎅이
 			ENDIF
 		ENDIF
 	ENDIF
