--- a/ERB/지문/MESSAGE_AKUOTI.ERB
+++ b/ERB/지문/MESSAGE_AKUOTI.ERB
@@ -72,7 +72,7 @@ PRINTFORML
 
 @MESSAGE_STAIN_CORRUPTED_HAIR_COLOR, ARG
 CALL SETCOLOR_BY_STR, "赤"
-PRINTFORML %PRINT_TRANSCALLNAME(ARG)%の髪の色は戻りませんでした……
+PRINTFORML %PRINT_TRANSCALLNAME(ARG)%の머리색は戻りませんでした……
 RESETCOLOR
 
 @MESSAGE_STAIN_CORRUPTED_EYE_COLOR_RIGHT, ARG
