--- a/ERB/지문/Slang/口語(SPOKEN)/S_SLANG_LABIAMAJORA（大陰唇）.ERB
+++ b/ERB/지문/Slang/口語(SPOKEN)/S_SLANG_LABIAMAJORA（大陰唇）.ERB
@@ -49,10 +49,10 @@ ELSEIF TALENT:812 == 3
 ;날씬함
 ELSEIF TALENT:812 == 4
 	S_SLANGWORD_LabiaMajora += "スラッとしている"
-;巨尻
+;빵뎅이
 ELSEIF TALENT:812 == 5
 	S_SLANGWORD_LabiaMajora += "ムチッとしている"
-;爆尻
+;왕뎅이
 ELSEIF TALENT:812 == 6
 	S_SLANGWORD_LabiaMajora += "ムニッとしている"
 ENDIF
