--- a/ERB/지문/Slang/文語(WRITTEN)/SLANG_H（尻）.ERB
+++ b/ERB/지문/Slang/文語(WRITTEN)/SLANG_H（尻）.ERB
@@ -44,10 +44,10 @@ ELSEIF TALENT:812 == 3
 ;날씬함
 ELSEIF TALENT:812 == 4
 	SLANGWORD_H += "肉付きの薄い"
-;巨尻
+;빵뎅이
 ELSEIF TALENT:812 == 5
 	SLANGWORD_H += "むっちりしている"
-;爆尻
+;왕뎅이
 ELSEIF TALENT:812 == 6
 	SLANGWORD_H += "むにゅっとした肉付きの"
 ENDIF
@@ -85,7 +85,7 @@ RETURNF SLANGWORD_H
 
 
 ;*************【淫語覚書（未登録）】***********************
-;巨尻
+;빵뎅이
 ;ぷりぷりの
 ;
 ;
