--- a/ERB/지문/Slang/文語(WRITTEN)/SLANG_LABIAMAJORA（大陰唇）.ERB
+++ b/ERB/지문/Slang/文語(WRITTEN)/SLANG_LABIAMAJORA（大陰唇）.ERB
@@ -52,10 +52,10 @@ ELSEIF TALENT:812 == 3
 ;날씬함
 ELSEIF TALENT:812 == 4
 	SLANGWORD_LabiaMajora += "スラッとしている"
-;巨尻
+;빵뎅이
 ELSEIF TALENT:812 == 5
 	SLANGWORD_LabiaMajora += "ムチっとしている"
-;爆尻
+;왕뎅이
 ELSEIF TALENT:812 == 6
 	SLANGWORD_LabiaMajora += "ムニッとしている"
 ENDIF
