--- a/ERB/캐릭터관련/흑화/CORRPUTION.ERB
+++ b/ERB/캐릭터관련/흑화/CORRPUTION.ERB
@@ -411,7 +411,7 @@ RETURN 0
 ;*******************************************************************************************************
 
 ;*******************************************************************************************************
-;悪落ち時の髪の色を生成
+;悪落ち時の머리색を生成
 ;元と異なる色にする
 ;*******************************************************************************************************
 @GET_CORRUPTED_HAIR_COLOR, ARGS
